Update Maven workflow and integration tests